--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maple-ui.netlify.app/CSS/base.css">
     <link rel="stylesheet" href="./CSS/base.css">
     <link rel="stylesheet" href="./playarea/home-test.css">
-    <title>MapleBlaze</title>
+    <title>Maple Coffee</title>
 </head>
 <body>
     <main class="maple-grid">
@@ -42,7 +42,7 @@
                 <h1 class=" semibold-font ">Experience the smoothness of the most premium <span class="boldest-font">Maple</span> coffee</h1>
                 <a href="#" class="btn txt-lg">ORDER NOW</a>
             </div>
-            <img class="hero-img" src="./Assets/sample-coffee-2.png" alt="" srcset="">
+            <img class="hero-img" src="./Assets/sample-coffee-2.png" alt="hero-img">
         </div>
         <div class="product-display">
             <div class="coffee-categories ">
@@ -67,17 +67,15 @@
                     <div class="card card-shadow">
                         <div class="header">
                             <div class="header-image-text-div">
-                                    <img class="header-image" src="./Assets/coffee-pro.jpg" alt="" srcset="">
+                                    <img class="header-image" src="./Assets/coffee-pro.jpg" alt="header-image">
                             </div>   
                             <div class=" pd-horizontal">
                                 <div class="hearder-text-primary little-padding">
                                     <h1>Latte</h1>
-                                    <h4>by Fujiko Fujio</h4>
+                                    <h3 class="txt-m txt-gray">One coke free with this smooth latte </h3>
+                                    <h4 class="">Rs 250/-  <span class="txt-gray">only</span> </h4>
                                 </div>    
-                            </div>
-                            <div class="hearder-text-secondary pd-horizontal">
-                                <p class="small-text">He is a male robotic cat that travels back in time from the 22nd century to aid a preteen boy named Nobita.</p>
-                            </div>    
+                            </div>   
                         </div>
                         <div class="footer-card">
                                 <a href="#" class="icons">Order Now</a>
@@ -86,17 +84,16 @@
                     <div class="card card-shadow">
                         <div class="header">
                             <div class="header-image-text-div">
-                                    <img class="header-image" src="./Assets/coffee-pro.jpg" alt="" srcset="">
+                                    <img class="header-image" src="./Assets/coffee-pro.jpg" alt="header-image">
                             </div>   
                             <div class=" pd-horizontal">
                                 <div class="hearder-text-primary ">
-                                    <h1>Doremon</h1>
-                                    <h4>by Fujiko Fujio</h4>
+                                    <h1>Latte</h1>
+                                    <h3 class="txt-m txt-gray">One coke free with this smooth latte </h3>
+                                    <h4 class="">Rs 250/-  <span class="txt-gray">only</span> </h4>
                                 </div>    
                             </div>
-                            <div class="hearder-text-secondary ">
-                                <p class="small-text pd-horizontal">He is a male robotic cat that travels back in time from the 22nd century to aid a preteen boy named Nobita.</p>
-                            </div>   
+                              
                         </div>
                         <div class="footer-card">
                             <a href="#" class="icons">Order Now</a>
