--- a/pages/product-listing-page.html
+++ b/pages/product-listing-page.html
@@ -242,7 +242,7 @@
                 <div class="card">
                     <div class="header maple-flex">
                         <div class="header-image-text-div">
-                                <img class="header-image" src="../Assets/coffee-pro.jpg" alt="" srcset="">
+                                <img class="header-image" src="../Assets/coffee-pro.jpg" alt="header-image">
                         </div>   
                         <div class=" pd-horizontal">
                             <div class="hearder-text-primary little-padding">
