added semantic tags
Added the semantic tags in the whole pages html and created the cart html file

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -32,7 +32,7 @@
                                       
                 </div>
             </nav>
-        <!-- lower Display for AD -->
+        <!-- shorter Display for AD -->
         <nav class="small-nav">
             <a href="#" class=" txt-m semibold-font">Tuesday sale</a>
             <a href="#" class=" txt-m semibold-font">Limited Edition</a>
