--- a/pages/cart.html
+++ b/pages/cart.html
@@ -5,20 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maple-ui.netlify.app/CSS/base.css">
-    <link rel="stylesheet" href="./CSS/base.css">
+    <link rel="stylesheet" href="../CSS/base.css">
     <title>Maple Coffee</title>
 </head>
 <body>
     <main class="maple-grid">
         <!-- upper nav-bar -->
-            <nav class="nav-bar top-nav ">
+            <nav class="nav-bar top-nav">
                 <div class="nav-left">
                     <a class=" logo-txt boldest-font" href="../index.html">MAPLE COFFEE</a>
                 </div>
-                
                 <div class="nav-right ">
                     <button class="open-dialog  nav-modal" >
-                        <i class=" fas fa-bars txt-xl navbar-icon "></i></button>
+                    <i class=" fas fa-bars txt-xl navbar-icon "></i></button>
                     <a href="#" class="navbar-icon txt-m bold-font hide-responsive">Sign up</a>
                     <a href="#" class="navbar-icon txt-m bold-font hide-responsive">login</a>                    
                     <div class="badge hide-responsive">
@@ -34,78 +33,80 @@
             </nav>
         <!-- shorter Display for AD -->
         <nav class="small-nav">
-            <a href="#" class=" txt-m semibold-font">Tuesday sale</a>
-            <a href="#" class=" txt-m semibold-font">Limited Edition</a>
-            <a href="#" class=" txt-m semibold-font">Upcomming offers</a>
+            <div class=" txt-m boldest-font ">Offer closing soon..</div>
         </nav>
         <!-- ################ -->
-        <section class="banner">
-            <div class="banner-text">
-                <h1 class=" semibold-font ">Experience the smoothness of the most premium <span class="boldest-font">Maple</span> coffee</h1>
-                <a href="#" class="btn txt-lg">ORDER NOW</a>
+        <section class="cart-display maple-wrap">
+            <div class="item-added  ">
+                <div class="card">
+                    <div class="header maple-flex">
+                        <div class="header-image-text-div">
+                                <img class="header-image" src="../Assets/coffee-pro.jpg" alt="header-img">
+                        </div>   
+                        <div class=" pd-horizontal">
+                            <div class="hearder-text-primary little-padding">
+                                <h3>hazelnut Coffee</h3>
+                            </div>
+                            <h3>Rs 259/-</h3>
+                            <span class="txt-gray txt-m">50% off</span>
+                        </div>  
+                    </div>
+                    <div class="cart-card-footer">
+                        <div class="row">
+                            <input type="number" value="1" class="qty-input">
+                            <label for="qtn-input">Qty</label>
+                        </div>
+                        <a href="#" class="icons btn">Remove from cart</a>
+                        <a href="#" class="icons">Move to Wishlist</a>
+                    </div>
+                </div>
             </div>
-            <img class="hero-img" src="./Assets/sample-coffee-2.png" alt="hero-img">
-        </section>
-        <section class="product-display">
-            <div class="coffee-categories ">
-                <div class="coffee-vari maple-flex-xy-center">
-                    <a href="#"><h3>Instant Coffee</h3></a>
+            <div class="bill-section ">
+                <div class="bill">
+                    <div class="card">
+                        <div class="header"> 
+                            <div>
+                                <div class="hearder-text-primary pd-horizontal">
+                                    <h3 class="boldest-font">Payment Details</h3>
+                                    <hr>
+                                    <div class="row justify-spacebtw">
+                                        <h4 class="semibold-font">Price (item)</h4>
+                                        <h5 class="txt-gray">Rs 259/-</h5>
+                                    </div>
+                                    <div class="row justify-spacebtw">
+                                        <h4 class="semibold-font">Discount</h4>
+                                        <h5 class="txt-gray">- Rs 99/-</h5>
+                                    </div>
+                                    <div class="row justify-spacebtw">
+                                        <h4 class="semibold-font">Delivery Charge</h4>
+                                        <h5 class="txt-gray">- Rs 0/-</h5>
+                                    </div>
+                                    <hr>
+                                    <div class="row justify-spacebtw">
+                                        <h4 class="boldest-font">Total Charge</h4>
+                                        <h5 class="txt-gray">- Rs 160/-</h5>
+                                    </div>
+                                </div>    
+                            </div>  
+                        </div>
+                        <div class="cart-card-footer">
+                            <a href="#" class="icons btn">Place Order</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="coffee-vari maple-flex-xy-center">
-                    <a href="#"><h3>Liquid coffee</h3></a>
-                </div>
-                <div class="coffee-vari maple-flex-xy-center">
-                    <a href="#"><h3>Cold Brew</h3></a>
-                </div>
-                <div class="coffee-vari maple-flex-xy-center">
-                    <a href="#"><h3>Ground Coffee</h3></a>
-                </div>
-            </div>      
+            </div>
         </section>
         <!-- ******************* -->
-        <section class="coffee-section">
-            <div class="often-ordered ">
-                <h1>Most Ordered</h1>
-                <div class="coffee-display">
-                    <div class="card card-shadow">
-                        <div class="header">
-                            <div class="header-image-text-div">
-                                    <img class="header-image" src="./Assets/coffee-pro.jpg" alt="header-image">
-                            </div>   
-                            <div class=" pd-horizontal">
-                                <div class="hearder-text-primary little-padding">
-                                    <h1>Latte</h1>
-                                    <h3 class="txt-m txt-gray">One coke free with this smooth latte </h3>
-                                    <h4 class="">Rs 250/-  <span class="txt-gray">only</span> </h4>
-                                </div>    
-                            </div>   
-                        </div>
-                        <div class="footer-card">
-                                <a href="#" class="icons">Order Now</a>
-                        </div>
-                    </div>
-                    <div class="card card-shadow">
-                        <div class="header">
-                            <div class="header-image-text-div">
-                                    <img class="header-image" src="./Assets/coffee-pro.jpg" alt="header-image">
-                            </div>   
-                            <div class=" pd-horizontal">
-                                <div class="hearder-text-primary ">
-                                    <h1>Latte</h1>
-                                    <h3 class="txt-m txt-gray">One coke free with this smooth latte </h3>
-                                    <h4 class="">Rs 250/-  <span class="txt-gray">only</span> </h4>
-                                </div>    
-                            </div>
-                              
-                        </div>
-                        <div class="footer-card">
-                            <a href="#" class="icons">Order Now</a>
-                        </div>
-                    </div>
-                </div>   
-            </div>
+        <section class="payment-article row maple-wrap justify-spacebtw">
+            <img src="../Assets/cardpay.png" class="large-img" alt="card-pay">
+            <h1 class="txt-gray boldest-font txt-center">Fully secured payment and no need to worry we are there for you</h1>
         </section>
-        <!-- ********************* -->
+        <!-- ******************* -->
+        <section class="payment-article row maple-wrap justify-center">
+            <h1 class="txt-gray boldest-font txt-center">Just place your order Coffee is waiting for you........</h1>
+            <img src="../Assets/sample-coffee.png" class="small-img" alt="coffee-img">
+        </section>
+        <!-- ******************* -->
         <footer class="ecom-footer maple-flex-xy-center">
             <div>
                 Made with love ❤ By <a class="semibold-font footer-link" target="_blank" href="https://twitter.com/KrishanuDutta_">KrishanuDutta</a>
