Used existing util

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -35,7 +35,7 @@
             <div class=" txt-m boldest-font ">Offer closing soon..</div>
         </nav>
         <!-- ################ -->
-        <section class="cart-display maple-wrap">
+        <section class="cart-display maple-wrap maple-flex-xy-center">
             <div class="item-added  ">
                 <div class="card">
                     <div class="header maple-flex">
@@ -50,7 +50,7 @@
                             <span class="txt-gray txt-m">50% off</span>
                         </div>  
                     </div>
-                    <div class="cart-card-footer">
+                    <div class="cart-card-footer maple-flex-xy-center">
                         <div class="row">
                             <input type="number" value="1" class="qty-input">
                             <label for="qtn-input">Qty</label>
@@ -88,7 +88,7 @@
                                 </div>    
                             </div>  
                         </div>
-                        <div class="cart-card-footer">
+                        <div class="cart-card-footer maple-flex-xy-center">
                             <a href="#" class="icons btn">Place Order</a>
                         </div>
                     </div>
