--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
 <body>
     <main class="maple-grid">
         <!-- upper nav-bar -->
-            <nav class="nav-bar top-nav ">
+            <nav class="nav-bar top-nav maple-wrap">
                 <div class="nav-left">
                     <a class=" logo-txt boldest-font" href="../index.html">MAPLE COFFEE</a>
                 </div>
-                
                 <div class="nav-right ">
-                    <button class="open-dialog  nav-modal" >
-                        <i class=" fas fa-bars txt-xl navbar-icon "></i></button>
-                    <a href="#" class="navbar-icon txt-m bold-font hide-responsive">Sign up</a>
-                    <a href="#" class="navbar-icon txt-m bold-font hide-responsive">login</a>                    
-                    <div class="badge hide-responsive">
-                        <a href="#"><i class="fa-solid fa-heart navbar-icon txt-lg badge-icon"></i></a>
+                    <a href="./pages/sign-up.html" class="navbar-icon txt-m bold-font ">Sign up</a>
+                    <a href="./pages/login.html" class="navbar-icon txt-m bold-font">login</a>                    
+                    <div class="badge ">
+                        <a href="./pages/login.html"><i class="fa-solid fa-heart navbar-icon txt-lg badge-icon"></i></a>
                         <div class="badge-value top-right"><h6>1</h6></div>
                     </div> 
-                    <div class="badge hide-responsive">
-                        <a href="#"><i class="fa-solid fa-cart-arrow-down navbar-icon txt-lg badge-icon"></i></a>
+                    <div class="badge ">
+                        <a href="./pages/login.html"><i class="fa-solid fa-cart-arrow-down navbar-icon txt-lg badge-icon"></i></a>
                         <div class="badge-value top-right"><h6>10</h6></div>
                     </div>
                                       
@@ -49,16 +46,16 @@
         <section class="product-display">
             <div class="coffee-categories ">
                 <div class="coffee-vari maple-flex-xy-center">
-                    <a href="#"><h3>Instant Coffee</h3></a>
+                    <a href="./pages/product-listing-page.html"><h3>Instant Coffee</h3></a>
                 </div>
                 <div class="coffee-vari maple-flex-xy-center">
-                    <a href="#"><h3>Liquid coffee</h3></a>
+                    <a href="./pages/product-listing-page.html"><h3>Liquid coffee</h3></a>
                 </div>
                 <div class="coffee-vari maple-flex-xy-center">
-                    <a href="#"><h3>Cold Brew</h3></a>
+                    <a href="./pages/product-listing-page.html"><h3>Cold Brew</h3></a>
                 </div>
                 <div class="coffee-vari maple-flex-xy-center">
-                    <a href="#"><h3>Ground Coffee</h3></a>
+                    <a href="./pages/product-listing-page.html"><h3>Ground Coffee</h3></a>
                 </div>
             </div>      
         </section>
