--- a/pages/cart.html
+++ b/pages/cart.html
@@ -10,21 +10,18 @@
 <body>
     <main class="maple-grid">
         <!-- upper nav-bar -->
-            <nav class="nav-bar top-nav">
+            <nav class="nav-bar top-nav maple-wrap">
                 <div class="nav-left">
                     <a class=" logo-txt boldest-font" href="../index.html">MAPLE COFFEE</a>
                 </div>
-                <div class="nav-right ">
-                    <button class="open-dialog  nav-modal" >
-                    <i class=" fas fa-bars txt-xl navbar-icon "></i></button>
-                    <a href="#" class="navbar-icon txt-m bold-font hide-responsive">Sign up</a>
-                    <a href="#" class="navbar-icon txt-m bold-font hide-responsive">login</a>                    
-                    <div class="badge hide-responsive">
-                        <a href="#"><i class="fa-solid fa-heart navbar-icon txt-lg badge-icon"></i></a>
+                <div class="nav-right">
+                    <a href="../index.html" class="navbar-icon txt-m bold-font">logout</a>                    
+                    <div class="badge">
+                        <a href="./wishlist.html"><i class="fa-solid fa-heart navbar-icon txt-lg badge-icon"></i></a>
                         <div class="badge-value top-right"><h6>1</h6></div>
                     </div> 
-                    <div class="badge hide-responsive">
-                        <a href="#"><i class="fa-solid fa-cart-arrow-down navbar-icon txt-lg badge-icon"></i></a>
+                    <div class="badge">
+                        <a href="./cart.html"><i class="fa-solid fa-cart-arrow-down navbar-icon txt-lg badge-icon"></i></a>
                         <div class="badge-value top-right"><h6>10</h6></div>
                     </div>
                                       
@@ -56,7 +53,7 @@
                             <label for="qtn-input">Qty</label>
                         </div>
                         <a href="#" class="icons btn">Remove from cart</a>
-                        <a href="#" class="icons">Move to Wishlist</a>
+                        <a href="./wishlist.html" class="icons">Move to Wishlist</a>
                     </div>
                 </div>
             </div>
