--- a/pages/product-listing-page.html
+++ b/pages/product-listing-page.html
@@ -15,16 +15,14 @@
                     <a class=" logo-txt boldest-font" href="../index.html">MAPLE COFFEE</a>
                 </div>
                 <div class="nav-right ">
-                    <button class="open-dialog  nav-modal" >
-                        <i class=" fas fa-bars txt-xl navbar-icon "></i></button>
-                    <a href="#" class="navbar-icon txt-m bold-font hide-responsive">Sign up</a>
-                    <a href="#" class="navbar-icon txt-m bold-font hide-responsive">login</a>                    
-                    <div class="badge hide-responsive">
-                        <a href="#"><i class="fa-solid fa-heart navbar-icon txt-lg badge-icon"></i></a>
+                    <a href="./sign-up.html" class="navbar-icon txt-m bold-font">Sign up</a>
+                    <a href="./login.html" class="navbar-icon txt-m bold-font">login</a>                    
+                    <div class="badge">
+                        <a href="./login.html"><i class="fa-solid fa-heart navbar-icon txt-lg badge-icon"></i></a>
                         <div class="badge-value top-right"><h6>1</h6></div>
                     </div> 
-                    <div class="badge hide-responsive">
-                        <a href="#"><i class="fa-solid fa-cart-arrow-down navbar-icon txt-lg badge-icon"></i></a>
+                    <div class="badge">
+                        <a href="./login.html"><i class="fa-solid fa-cart-arrow-down navbar-icon txt-lg badge-icon"></i></a>
                         <div class="badge-value top-right"><h6>10</h6></div>
                     </div>                     
                 </div>
