--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -10,21 +10,18 @@
 <body>
     <main>
         <!-- upper nav-bar -->
-            <nav class="nav-bar nav-pd">
+            <nav class="nav-bar nav-pd maple-wrap">
                 <div class="nav-left">
                     <a class=" logo-txt boldest-font" href="../index.html">MAPLE COFFEE</a>
                 </div>
                 <div class="nav-right">
-                    <button class="open-dialog nav-modal">
-                    <i class=" fas fa-bars txt-xl navbar-icon "></i></button>
-                    <a href="#" class="navbar-icon txt-m bold-font hide-responsive">Sign up</a>
-                    <a href="#" class="navbar-icon txt-m bold-font hide-responsive">login</a>                    
-                    <div class="badge hide-responsive">
-                        <a href="#"><i class="fa-solid fa-heart navbar-icon txt-lg badge-icon"></i></a>
+                    <a href="../index.html" class="navbar-icon txt-m bold-font">logout</a>                    
+                    <div class="badge">
+                        <a href="./wishlist.html"><i class="fa-solid fa-heart navbar-icon txt-lg badge-icon"></i></a>
                         <div class="badge-value top-right"><h6>1</h6></div>
                     </div> 
-                    <div class="badge hide-responsive">
-                        <a href="#"><i class="fa-solid fa-cart-arrow-down navbar-icon txt-lg badge-icon"></i></a>
+                    <div class="badge">
+                        <a href="./cart.html"><i class="fa-solid fa-cart-arrow-down navbar-icon txt-lg badge-icon"></i></a>
                         <div class="badge-value top-right"><h6>10</h6></div>
                     </div>
                                       
@@ -32,7 +29,7 @@
             </nav>
         <!-- shorter Display for AD -->
         <nav class="small-nav">
-            <div class=" txt-m boldest-font">Make your wishlist come true move them to <a href="#" class="btn">cart</a></div>
+            <div class=" txt-m boldest-font">Make your wishlist come true move them to <a href="../pages/cart.html" class="btn">cart</a></div>
         </nav>
         <!-- ################ -->
         <section class="cart-display maple-wrap maple-flex-xy-center height-section">
@@ -56,7 +53,7 @@
                     <div class="card-close-btn top-right"><i class="fas fa-times-circle"></i></div>   
                 </div>
                 <div class="cart-card-footer maple-flex-xy-center">
-                    <a href="#" class="icons ">Add to cart</a>
+                    <a href="./cart.html" class="icons ">Add to cart</a>
                     <a href="#" class="icons btn">Buy Now</a>
                 </div>
             </div>
@@ -80,7 +77,7 @@
                     <div class="card-close-btn top-right"><i class="fas fa-times-circle"></i></div>   
                 </div>
                 <div class="cart-card-footer maple-flex-xy-center">
-                    <a href="#" class="icons ">Add to cart</a>
+                    <a href="./cart.html" class="icons ">Add to cart</a>
                     <a href="#" class="icons btn">Buy Now</a>
                 </div>
             </div>
@@ -104,7 +101,7 @@
                     <div class="card-close-btn top-right"><i class="fas fa-times-circle"></i></div>   
                 </div>
                 <div class="cart-card-footer maple-flex-xy-center">
-                    <a href="#" class="icons ">Add to cart</a>
+                    <a href="../pages/cart.html" class="icons ">Add to cart</a>
                     <a href="#" class="icons btn">Buy Now</a>
                 </div>
             </div>    
